k8sapps/k8s-admission-webhooks/sleep-no-validation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  annotations:
    admission-webhook-example.banzaicloud.com/validate: "false"
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: tutum/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
