k8sapps/k8s-admission-webhooks/validatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation-webhook-example-cfg
  labels:
    app: admission-webhook-example
webhooks:
  - name: required-labels.banzaicloud.com
    clientConfig:
      service:
        name: admission-webhook-example-svc 
        namespace: default
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJd01ETXlPREExTlRJeU0xb1hEVE13TURNeU56QTFOVEl5TTFvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUpUCkU3TFM5ZlVLZ1prd3pGMU1zTmFGK3ltUzdrS091NHM1UnJRLzdEOS9xS0JybVJ2emhEZzFwRmFFaStWb055SFkKWmpiQ29VcnNyMFZScVdUOEFnS1YxbElpRTYzRGt2L05BTHk3WTlaVnI5Wk8vMW0welQ1cmo0ekdieitGWC9NUQpJUmQydDFYK0hD [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments", "services"]
    namespaceSelector:
      matchLabels:
        admission-webhook-example: enabled
